--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
         </main>
         <div id="xkcd_pw_gen_result"></div>
     </body>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/chance/1.0.9/chance.min.js"></script>
+    <script src="./js/jquery.min.js" data-version="3.2.1"></script>
+    <script src="./js//chance.min.js" data-version="1.0.9"></script>
     <script src="./js/_.js"></script>
     <script src="./js/xkcd.js"></script>
     <!--<script src="./js/barn.min.js"></script>-->
