--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         <div id="xkcd_pw_gen_result"></div>
     </body>
     <script src="./js/jquery.min.js" data-version="3.2.1"></script>
-    <script src="./js//chance.min.js" data-version="1.0.9"></script>
+    <script src="./js/chance.min.js" data-version="1.0.9"></script>
     <script src="./js/_.js"></script>
     <script src="./js/xkcd.js"></script>
     <!--<script src="./js/barn.min.js"></script>-->
