--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     </body>
     <script src="./js/jquery.min.js" data-version="3.2.1"></script>
     <script src="./js/chance.min.js" data-version="1.0.9"></script>
-    <script src="./js/_.js"></script>
+    <script src="./js/site.js"></script>
     <script src="./js/xkcd.js"></script>
     <!--<script src="./js/barn.min.js"></script>-->
     <!--<script src="./js/fontawesome.js"></script>-->
