--- a/index.html
+++ b/index.html
@@ -15,23 +15,22 @@
     <link rel="apple-touch-icon" href="img/favicon.png" />
     <link rel="apple-touch-icon-precomposed" href=" img/favicon.png" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-    <link rel="stylesheet" href="./css/materialize.css" />
+    <link rel="stylesheet" href="./css/materialize.min.css" />
     <link rel="stylesheet" href="./css/style.css" />
-    <!-- http://passwordsgenerator.net/ -->
     <!-- ICONS -->
     <link rel="icon" type="image/png" href="./img/favicon.png">
     <link rel="apple-touch-icon" href="./img/favicon.png" />
     <link rel="apple-touch-icon-precomposed" href="./img/favicon.png" />
 
-    <body class="" onchange="generatePassword();" onkeypress="generatePassword();" onkeyup="generatePassword();">
+    <body class="" onchange="generatePassword();" onkeypress="generatePassword();">
         <main>
             <form name="formCloud" class="formCloud col s12" id="formCloud">
                 <header class="light-blue row">
-                    <!--<div class="col s1 m1 l1 text-white inline">
-                    <a href="#" data-activates="slide-out" class="button-collapse circle hide-on-large-only white-text">
-                    <i class="mdi-navigation-menu white-text" style="font-size:2em;"></i>
-                    </a>
-                </div>-->
+                    <div class="col s1 m1 l1 text-white inline">
+                        <a href="#" data-activates="slide-out" class="button-collapse circle hide-on-large-only white-text">
+                            <i class="mdi-navigation-menu white-text" style="font-size:2em;"></i>
+                        </a>
+                    </div>
                     <div class="input-field masterPassword col s11 m12 l12 text-white inline">
                         <input type="password" name="masterPass" value="" id="masterPass" class="validate fieldOn large" autocorrect="off" autocapitalize="off" tabindex="1" onfocus="$(this).select();" onclick="$(this).select();" onfocus="SelectAll('master');fieldOn('master');"
                             onclick="SelectAll('master');fieldOn('master');" title="Choose a strong Master Password." style="" />
@@ -79,7 +78,7 @@
                     </div>
                     <div class="input-field col s6 m3 l3">
                         <select name="passType" id="passType" onchange="generatePassword();" onkeypress="generatePassword();">
-                                <option value="password">Password</option>
+                                <option value="password" class="light-blue">Password</option>
                                 <!--<option value="username">USERNAME</option>-->
                                 <option value="pin">PIN</option>
                                 <option value="phrase">PHRASE</option>
@@ -93,41 +92,42 @@
                         <ul class="collapsible collapsible-accordion z-depth-0">
                             <li>
                                 <a id="optionsMenu" class="collapsible-header">OPTIONS: <span class="right" id="optionsArrow">&#8675;</span></a>
-                                <div class="collapsible-body">
+                                <div class="collapsible-body options">
                                     <ul>
                                         <li>
                                             <input type="checkbox" class="filled-in tooltipped" id="alpha" checked="checked" />
-                                            <label for="alpha" id="alphaLabel" class="tooltipped" data-position="right" data-delay="100" data-tooltip="A a B b C c D d E e ...">
+                                            <label for="alpha" id="alphaLabel" class="tooltipped" data-position="left" data-delay="100" data-tooltip="A a B b C c D d E e &#8230;">
                                                 Alpha
                                                 </label>
                                         </li>
                                         <li>
                                             <input type="checkbox" class="filled-in tooltipped" id="numeric" checked="checked" />
-                                            <label for="numeric" id="numericLabel" class="tooltipped" data-position="right" data-delay="100" data-tooltip="1 2 3 4 5 6 7 8 9 0">
+                                            <label for="numeric" id="numericLabel" class="tooltipped" data-position="left" data-delay="100" data-tooltip="1 2 3 4 5 6 7 8 9 0">
                                                 Numeric
                                                 </label>
                                         </li>
                                         <li>
                                             <input type="checkbox" class="filled-in tooltipped" id="ambiguous" checked="checked" />
-                                            <label for="ambiguous" id="ambiguousLabel" class="tooltipped" data-position="right" data-delay="100" data-tooltip="_ i I L 1 l l | o 0 O">
+                                            <label for="ambiguous" id="ambiguousLabel" class="tooltipped" data-position="left" data-delay="100" data-tooltip="_ i I L 1 l l | o 0 O">
                                                 Similar
                                                 </label>
                                         </li>
                                         <li>
                                             <input type="checkbox" class="filled-in tooltipped" id="special" checked="checked" />
-                                            <label for="special" id="specialLabel" class="tooltipped" data-position="right" data-delay="100" data-tooltip="! @ # $ % ^ &amp; * _ - = + ` ~ ( ) [ ] { } ; : \ &apos; &quot; , .  < > ? / \ |">
+                                            <label for="special" id="specialLabel" class="tooltipped" data-position="left" data-delay="100" data-tooltip="! @ # $ % ^ &amp; * _ - = + ` ~ &#8230;">
+                                            <!-- data-tooltip="! @ # $ % ^ &amp; * _ - = + ` ~ ( ) [ ] { } ; : \ &apos; &quot; , .  < > ? / \ |" -->
                                                 Special
                                                 </label>
                                         </li>
                                         <li>
                                             <input type="checkbox" class="filled-in tooltipped" id="extended" />
-                                            <label for="extended" id="extendedLabel" class="tooltipped" data-position="right" data-delay="100" data-tooltip="¡ ¢ £ ¤ ¥ ¦ § ¨ © ª ® ° ± µ ¿">
+                                            <label for="extended" id="extendedLabel" class="tooltipped" data-position="left" data-delay="100" data-tooltip="¡ ¢ £ ¤ ¥ ¦ § ¨ © ª ® ° ± µ ¿">
                                                 Extended
                                                 </label>
                                         </li>
                                         <li>
                                             <input type="checkbox" class="filled-in tooltipped" id="yearly" checked="checked" />
-                                            <label for="yearly" id="yearlyLabel" class="tooltipped" data-position="right" data-delay="100" data-tooltip="Changes passwords every year.">
+                                            <label for="yearly" id="yearlyLabel" class="tooltipped" data-position="left" data-delay="100" data-tooltip="Changes passwords every year.">
                                                 Yearly
                                                 </label>
                                         </li>
@@ -155,44 +155,91 @@
                         <button type="reset" class="clr small waves-effect waves-light btn light-blue z-depth-0" onclick="fieldOff();clearButton();">Clear</button>
                     </div>
                 </div>
-                <div class="row">
-                    <!--PLAYGROUND-->
-                    <!--PLAYGROUND-->
-                </div>
             </form>
         </main>
-        <div id="xkcd_pw_gen_result"></div>
+        <footer class="white" style="margin:0;padding:1vmin 4vmin;">
+            <div class="col l6 s12">
+                <a class="right modal-trigger" href="#about"><i class="material-icons">info_outline</i></a>
+            </div>
+        </footer>
+        <section>
+            <!-- Modal Structure -->
+            <div id="about" class="modal modal-fixed-footer">
+                <div class="modal-content">
+                    <article>
+                        <h4>What is Passcloud?</h4>
+                        <p>For most people, passwords are a real problem. Remembering passwords is a pain and using the same password everywhere will eventually lead to a disaster. While traditional password managers solve this with lots of random passwords
+                            they have to save your passwords in their databases. This makes your lists of passwords vulnerable to hacking and interception.</p>
+                        <p>Passcloud attempts to solve the problem other password managers have by never storing your passwords. Instead, Passcloud generates pseudo-random passwords based on the Mersenne Twister PRNG algorithm. Users combine the same repeatable
+                            information based on a master password and always get the same unique password.</p>
+                        <p>By using Passcloud for every site you visit you're less vulnerable to security breaches, even if one password is compromised all of your other passwords generated from the same Passcloud remains secure!</p>
+                        <h5>Nothing to Hack</h5>
+                        <p>With Passcloud there is nothing to intercept since it uses client-side JavaScript and avoids sending sensitive data across a network, making it one of the most secure password managers available. Passcloud is based on a stateless
+                            algorithm which frees it from the reliance on storage of secrets.</p>
+                        <p>Since your generated passwords aren't saved to your device, there is no risk you'll be forced to divulge them to aggressive peers. And since these passwords don't need to be backed up or synchronized between devices over the network,
+                            there is no risk of them getting intercepted.</p>
+                        <p>Finally, Passcloud is free software (GPLv3), its algorithm extensively documented and does not require you to trust any external party. This is particularly interesting in a society where things like PRISM and gag orders are a
+                            real threat.</p>
+                        <h5>Always In Sync</h5>
+                        <p>No cloud provider to trust, no backups to maintain and no data connection for keeping in sync. Contrary to other password solutions, Passcloud doesn't need to send your passwords over the network to make them ubiquitously available.
+                            Just add your information into each of your devices and your passwords will be available instantly on all of them.</p>
+                        <p>No cloud provider to trust, no backups to maintain and no data connection for keeping in sync. Since Passcloud generates your passwords on-demand based on your user name and Passcloud, you don't have any of these fragile dependencies.
+                            This gives you massive availability advantages, but also helps thwart man-in-the-middle attacks, snooping and trust issues related to cloud providers.</p>
+                        <p>Since Passcloud generates your passwords on-demand based on your information and master password, you don't have any of these fragile dependencies. This gives you massive availability advantages but also helps thwart man-in-the-middle
+                            attacks, snooping and trust issues related to cloud providers.</p>
+                        <h5>For Any Purpose</h5>
+                        <p>Passcloud comes with a variety of built-in password types. These types make your password look different, become more secure or more compatible with a site's password policy.</p>
+                        <p>Passcloud also implements a solution that allows you to save custom information in the app. This information is AES encrypted using a large key derived from your master password. </p>
+                    </article>
+                </div>
+                <div class="modal-footer">
+                    <div class="col l6 s12 left">
+                        <a href="https://github.com/spencerthayer/Passcloud">Passcloud</a> N&copy;! 2009 &mdash;
+                        <script>
+                            document.write(new Date().getFullYear());
+                        </script>
+                        <a href="http://spencerthayer.com/" target="_system" onClick="window.open(" http://spencerthayer.com ", "_system ");">Spencer Thayer</a>
+                    </div>
+                    <a href="javascript:void();" class=" modal-action modal-close waves-effect waves-blue btn-flat right">Close</a>
+                </div>
+            </div>
+        </section>
+        <!--<ul id="slide-out" class="side-nav fixed">
+            <li class="logo flow-text">Passcloud</li>
+        </ul>-->
+        <ul id="slide-out" class="side-nav fixed">
+            <li style="height:176px;">
+                <div class="userView" style="height:176px;">
+                    <div class="background">
+                        <img src="./img/bg.png" width="100%">
+                    </div>
+                    <!--<a href="#!user"><img class="circle" src="http://materializecss.com/images/yuna.jpg"></a>
+                    <a href="#!name"><span class="white-text name">John Doe</span></a>
+                    <a href="#!email"><span class="white-text email">jdandturk@gmail.com</span></a>-->
+                </div>
+            </li>
+            <!--<li class="search">
+                <div class="search-wrapper">
+                    <input id="search"><i class="material-icons">search</i>
+                    <!--<div class="search-results"></div>-->
+            <!--</div>-->
+            <!--</li>-->
+            <li><a href="#!"><i class="material-icons">cloud</i>First Link With Icon</a></li>
+            <li><a href="#!">Second Link</a></li>
+            <li>
+                <div class="divider"></div>
+            </li>
+            <li><a class="subheader">Subheader</a></li>
+            <li><a class="waves-effect" href="#!">Third Link With Waves</a></li>
+        </ul>
     </body>
     <script src="./js/jquery.min.js" data-version="3.2.1"></script>
-    <script src="./js/chance.min.js" data-version="1.0.9"></script>
+    <script src="./js/materialize.min.js" data-version="0.98.2"></script>
+    <script src="./js/chance.min.js" data-version="1.0.4"></script>
     <script src="./js/site.js"></script>
     <script src="./js/xkcd.js"></script>
     <!--<script src="./js/barn.min.js"></script>-->
     <!--<script src="./js/fontawesome.js"></script>-->
-    <!-- MATERIALUI -->
-    <script src="./js/materialui/animation.js"></script>
-    <script src="./js/materialui/buttons.js"></script>
-    <script src="./js/materialui/cards.js"></script>
-    <script src="./js/materialui/character_counter.js"></script>
-    <script src="./js/materialui/collapsible.js"></script>
-    <script src="./js/materialui/dropdown.js"></script>
-    <script src="./js/materialui/forms.js"></script>
-    <script src="./js/materialui/global.js"></script>
-    <script src="./js/materialui/hammer.min.js"></script>
-    <script src="./js/materialui/jquery.easing.1.3.js"></script>
-    <script src="./js/materialui/jquery.hammer.js"></script>
-    <script src="./js/materialui/jquery.timeago.min.js"></script>
-    <script src="./js/materialui/leanModal.js"></script>
-    <script src="./js/materialui/materialbox.js"></script>
-    <script src="./js/materialui/pushpin.js"></script>
-    <script src="./js/materialui/scrollFire.js"></script>
-    <script src="./js/materialui/sideNav.js"></script>
-    <script src="./js/materialui/tabs.js"></script>
-    <script src="./js/materialui/toasts.js"></script>
-    <script src="./js/materialui/tooltip.js"></script>
-    <script src="./js/materialui/velocity.min.js"></script>
-    <script src="./js/materialui/waves.js"></script>
-    <!-- MATERIALUI -->
     <script>
         // var storeDB = new Barn(localStorage);
         // storeDB.set('key', 'val');
