--- a/index.html
+++ b/index.html
@@ -27,8 +27,11 @@
             <form name="formCloud" class="formCloud col s12" id="formCloud">
                 <header class="light-blue row">
                     <div class="col s1 m1 l1 text-white inline">
-                        <a href="#" data-activates="slide-out" class="button-collapse circle hide-on-large-only white-text">
+                        <!--<a href="#" data-activates="slide-out" class="button-collapse circle hide-on-large-only white-text">
                             <i class="mdi-navigation-menu white-text" style="font-size:2em;"></i>
+                        </a>-->
+                        <a href="#" data-activates="slide-out" class="button-collapse hide-on-large-only">
+                            <i class="material-icons white-text">menu</i>
                         </a>
                     </div>
                     <div class="input-field masterPassword col s11 m12 l12 text-white inline">
