--- a/index.html
+++ b/index.html
@@ -26,11 +26,8 @@
         <main>
             <form name="formCloud" class="formCloud col s12" id="formCloud">
                 <header class="light-blue row">
-                    <div class="col s1 m1 l1 text-white inline">
-                        <!--<a href="#" data-activates="slide-out" class="button-collapse circle hide-on-large-only white-text">
-                            <i class="mdi-navigation-menu white-text" style="font-size:2em;"></i>
-                        </a>-->
-                        <a href="#" data-activates="slide-out" class="button-collapse hide-on-large-only">
+                    <div class="col s12 m12 l12 text-white inline">
+                        <a href="#" data-activates="slide-out" class="button-collapse circle hide-on-large-only white-text">
                             <i class="material-icons white-text">menu</i>
                         </a>
                     </div>
@@ -227,8 +224,7 @@
                     <!--<div class="search-results"></div>-->
             <!--</div>-->
             <!--</li>-->
-            <li><a href="#!"><i class="material-icons">cloud</i>First Link With Icon</a></li>
-            <li><a href="#!">Second Link</a></li>
+            <li><a><i class="material-icons">cloud</i>Passcloud 2.0alpha</a></li>
             <li>
                 <div class="divider"></div>
             </li>
