--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link rel="apple-touch-icon" href="./img/favicon.png" />
     <link rel="apple-touch-icon-precomposed" href="./img/favicon.png" />
 
-    <body class="" onchange="generatePassword();" onkeypress="generatePassword();">
+    <body class="" onchange="generatePassword();" onkeypress="generatePassword();" onkeyup="generatePassword();">
         <main>
             <form name="formCloud" class="formCloud col s12" id="formCloud">
                 <header class="light-blue row">
