--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <form name="formCloud" class="formCloud col s12" id="formCloud">
                 <header class="light-blue row">
                     <div class="col s12 m12 l12 text-white inline">
-                        <a href="#" data-activates="slide-out" class="button-collapse circle hide-on-large-only white-text">
+                        <a href="#" data-activates="slide-out" class="menuButton button-collapse circle hide-on-large-only white-text">
                             <i class="material-icons white-text">menu</i>
                         </a>
                     </div>
