--- a/index.html
+++ b/index.html
@@ -225,9 +225,9 @@
             <!--<li class="search">
                 <div class="search-wrapper">
                     <input id="search"><i class="material-icons">search</i>
-                    <!--<div class="search-results"></div>-->
-            <!--</div>-->
-            <!--</li>-->
+                    <div class="search-results"></div>
+                </div>
+            </li>-->
             <li><a class="subheader">Subheader</a></li>
             <li><a class="waves-effect" href="#!">Third Link With Waves</a></li>
         </ul>
