--- a/index.html
+++ b/index.html
@@ -232,29 +232,12 @@
             <li><a class="waves-effect" href="#!">Third Link With Waves</a></li>
         </ul>
     </body>
-    <script src="./js/jquery.min.js" data-version="3.2.1"></script>
-    <script src="./js/materialize.min.js" data-version="0.98.2"></script>
-    <script src="./js/chance.min.js" data-version="1.0.4"></script>
-    <script src="./js/site.js"></script>
+    <script src="./js/jquery.min.js" data-version="3.2.1" data-source="https://github.com/jquery/jquery"></script>
+    <script src="./js/materialize.min.js" data-version="0.98.2" data-source="https://github.com/dogfalo/materialize/"></script>
+    <script src="./js/chance.min.js" data-version="1.0.4" data-source="https://github.com/chancejs/chancejs"></script>
+    <script src="./js/favicon.js" data-version="1.3.0" data-source="https://github.com/disconnectme/favicon"></script>
+    <script src="./js/app.js"></script>
     <script src="./js/xkcd.js"></script>
-    <!--<script src="./js/barn.min.js"></script>-->
-    <!--<script src="./js/fontawesome.js"></script>-->
-    <script>
-        // var storeDB = new Barn(localStorage);
-        // storeDB.set('key', 'val');
-        // console.log(storeDB.get('key')); // val
-        // storeDB.lpush('list', 'val1');
-        // storeDB.lpush('list', 'val2');
-        // console.log(storeDB.rpop('list')); // val1
-        // console.log(storeDB.rpop('list')); // val2
-        // storeDB.sadd('set', 'val1');
-        // storeDB.sadd('set', 'val2');
-        // storeDB.sadd('set', 'val3');
-        // console.log(storeDB.smembers('set')); // ['val1', 'val2', 'val3']
-        // storeDB.srem('set', 'val3');
-        // console.log(storeDB.smembers('set')); // ['val1', 'val2']
-        // storeDB.condense();
-    </script>
 
 </html>
 </script>
