--- a/index.html
+++ b/index.html
@@ -228,14 +228,20 @@
                     <div class="search-results"></div>
                 </div>
             </li>-->
-            <li><a class="subheader">Subheader</a></li>
-            <li><a class="waves-effect" href="#!">Third Link With Waves</a></li>
+            <li>
+                <a class="subheader">Saved Sites</a>
+            </li>
+            <li>
+                <a class="waves-effect">
+                    <!--<img src="https://www.google.com/s2/favicons?domain=facebook.com" class="favicon" /> Third Link With Waves-->
+                    <img src="https://ucygetfavicon.appspot.com/http://google.com" class="favicon" /> Test Google Login
+                </a>
+            </li>
         </ul>
     </body>
     <script src="./js/jquery.min.js" data-version="3.2.1" data-source="https://github.com/jquery/jquery"></script>
     <script src="./js/materialize.min.js" data-version="0.98.2" data-source="https://github.com/dogfalo/materialize/"></script>
     <script src="./js/chance.min.js" data-version="1.0.4" data-source="https://github.com/chancejs/chancejs"></script>
-    <script src="./js/favicon.js" data-version="1.3.0" data-source="https://github.com/disconnectme/favicon"></script>
     <script src="./js/app.js"></script>
     <script src="./js/xkcd.js"></script>
 
