Working localStore Crypto

--- a/index.html
+++ b/index.html
@@ -234,18 +234,45 @@
             <li>
                 <a class="waves-effect">
                     <!--<img src="https://www.google.com/s2/favicons?domain=facebook.com" class="favicon" /> Third Link With Waves-->
-                    <img src="https://ucygetfavicon.appspot.com/http://google.com" class="favicon" /> Test Google Login
+                    <img src="https://ucygetfavicon.appspot.com/http://google.com" class="favicon circle" /> Test Google `Logi`n`
                 </a>
             </li>
         </ul>
     </body>
     <script src="./js/jquery.min.js" data-version="3.2.1" data-source="https://github.com/jquery/jquery"></script>
-    <script src="./js/materialize.min.js" data-version="0.98.2" data-source="https://github.com/dogfalo/materialize/"></script>
+    <script src="./js/materialize.min.js" data-version="0.98.2" data-source="https://github.com/dogfalo/materialize"></script>
     <script src="./js/chance.min.js" data-version="1.0.4" data-source="https://github.com/chancejs/chancejs"></script>
+    <script src="./js/crypt.io.min.js" data-version="1.0.0" data-source="https://github.com/jas-/crypt.io"></script>
+    <script src="./js/sjcl.js" data-version="1.0.4" data-source="https://github.com/bitwiseshiftleft/sjcl"></script>
+    <!--<script src="./js/" data-version="" data-source=""></script>-->
     <script src="./js/app.js"></script>
     <script src="./js/xkcd.js"></script>
+    <script>
+        // var storage = cryptio,
+        //     inventory = [{
+        //         "SKU": "39-48949",
+        //         "Price": 618,
+        //         "Item": "Snowboard"
+        //     }, {
+        //         "SKU": "99-28128",
+        //         "Price": 78.99,
+        //         "Item": "Cleats"
+        //     }, {
+        //         "SKU": "83-38285",
+        //         "Price": 3.99,
+        //         "Item": "Hockey Puck"
+        //     }];
 
-</html>
-</script>
+        // storage.set('inventory', inventory, function(err, results) {
+        //     if (err) throw err;
+        //     console.log(results);
+        // });
+        // var storage = cryptio;
+
+        // storage.get('inventory', function(err, results) {
+        //     if (err) throw err;
+        //     console.log(results);
+        // });
+    </script>
 
 </html>
