--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                         <script>
                             document.write(new Date().getFullYear());
                         </script>
-                        <a href="http://spencerthayer.com/" target="_system" onClick="window.open(" http://spencerthayer.com ", "_system ");">Spencer Thayer</a>
+                        <!--<a href="http://spencerthayer.com/" target="_system" onClick="window.open(" http://spencerthayer.com ", "_system ");">Spencer Thayer</a>-->
                     </div>
                     <a href="javascript:void();" class=" modal-action modal-close waves-effect waves-blue btn-flat right">Close</a>
                 </div>
@@ -234,7 +234,7 @@
             <li>
                 <a class="waves-effect">
                     <!--<img src="https://www.google.com/s2/favicons?domain=facebook.com" class="favicon" /> Third Link With Waves-->
-                    <img src="https://ucygetfavicon.appspot.com/http://google.com" class="favicon circle" /> Test Google `Logi`n`
+                    <img src="https://ucygetfavicon.appspot.com/http://google.com" class="favicon circle" /> Test Google
                 </a>
             </li>
         </ul>
@@ -248,31 +248,31 @@
     <script src="./js/app.js"></script>
     <script src="./js/xkcd.js"></script>
     <script>
-        // var storage = cryptio,
-        //     inventory = [{
-        //         "SKU": "39-48949",
-        //         "Price": 618,
-        //         "Item": "Snowboard"
-        //     }, {
-        //         "SKU": "99-28128",
-        //         "Price": 78.99,
-        //         "Item": "Cleats"
-        //     }, {
-        //         "SKU": "83-38285",
-        //         "Price": 3.99,
-        //         "Item": "Hockey Puck"
-        //     }];
+        var storage = cryptio,
+            inventory = [{
+                "SKU": "39-48949",
+                "Price": 618,
+                "Item": "SATANISM!"
+            }, {
+                "SKU": "99-28128",
+                "Price": 78.99,
+                "Item": "Cleats"
+            }, {
+                "SKU": "83-38285",
+                "Price": 3.99,
+                "Item": "Hockey Puck"
+            }];
 
-        // storage.set('inventory', inventory, function(err, results) {
-        //     if (err) throw err;
-        //     console.log(results);
-        // });
-        // var storage = cryptio;
+        storage.set('inventory', inventory, function(err, results) {
+            if (err) throw err;
+            console.log(results);
+        });
+        var storage = cryptio;
 
-        // storage.get('inventory', function(err, results) {
-        //     if (err) throw err;
-        //     console.log(results);
-        // });
+        storage.get('inventory', function(err, results) {
+            if (err) throw err;
+            console.log(results);
+        });
     </script>
 
 </html>
