--- a/index.html
+++ b/index.html
@@ -248,31 +248,47 @@
     <script src="./js/app.js"></script>
     <script src="./js/xkcd.js"></script>
     <script>
-        var storage = cryptio,
-            inventory = [{
-                "SKU": "39-48949",
-                "Price": 618,
-                "Item": "SATANISM!"
-            }, {
-                "SKU": "99-28128",
-                "Price": 78.99,
-                "Item": "Cleats"
-            }, {
-                "SKU": "83-38285",
-                "Price": 3.99,
-                "Item": "Hockey Puck"
-            }];
+        // var storage = cryptio,
+        //     passStore = [{
+        //         "SKU": "39-48949",
+        //         "Price": 618,
+        //         "Item": "qwdqwd!"
+        //     }, {
+        //         "SKU": "99-28128",
+        //         "Price": 78.99,
+        //         "Item": "Cleats"
+        //     }, {
+        //         "SKU": "83-38285",
+        //         "Price": 3.99,
+        //         "Item": "Hockey Puck"
+        //     }];
 
-        storage.set('inventory', inventory, function(err, results) {
-            if (err) throw err;
-            console.log(results);
-        });
-        var storage = cryptio;
+        // storage.set('passStore', passStore, function(err, results) {
+        //     if (err) throw err;
+        //     console.log(results);
+        // });
+        // var storage = cryptio;
 
-        storage.get('inventory', function(err, results) {
-            if (err) throw err;
-            console.log(results);
-        });
+        // storage.get('passStore', function(err, results) {
+        //     if (err) throw err;
+        //     console.log(results);
+        // });
+
+        // var pass = window.prompt("Please enter password...", encryptPassword);
+
+        // var options = {
+        //     passphrase: pass
+        // };
+
+        // storage.set(options, 'passStore', passStore, function(err, results) {
+        //     if (err) throw err;
+        //     console.log(results);
+        // });
+
+        // storage.get('passStore', function(err, results) {
+        //     if (err) throw err;
+        //     console.log(results);
+        // });
     </script>
 
 </html>
