--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <body class="" onchange="generatePassword();" onkeypress="generatePassword();" onkeyup="generatePassword();">
         <main>
-            <form name="formCloud" class="formCloud col s12" id="formCloud">
+            <form name="formCloud" class="formCloud col s12" id="formCloud" action="javascript:void();">
                 <header class="light-blue row">
                     <div class="col s12 m12 l12 text-white inline">
                         <a href="#" data-activates="slide-out" class="menuButton button-collapse circle hide-on-large-only white-text">
