--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 <body class="" onchange="generatePassword();" onkeypress="generatePassword();" onkeyup="generatePassword();">
     <main>
-        <form name="formCloud" class="formCloud col s12" id="formCloud" action="javascript:void();">
+        <form name="formCloud" class="formCloud col s12" id="formCloud" action="javascript:void(0);">
             <header class="light-blue row">
                 <div class="col s12 m12 l12 text-white inline">
                     <a href="#" data-activates="slide-out" class="menuButton button-collapse circle hide-on-large-only white-text">
@@ -78,7 +78,7 @@
                     <label>Lenght:</label>
                 </div>
                 <div class="input-field col s4 m2 l2">
-                    <input type="number" id="year" />
+                    <input type="number" id="year" value="document.write(currentYear);" />
                     <label for="yearNum" id="yearLabel" class="tooltipped" data-position="right" data-delay="100" data-tooltip="Yearly password change.">
                             Year:
                             </label>
@@ -162,10 +162,10 @@
             </div>
             <div class="row">
                 <div class="input-field col s6 m3 l3">
-                    <button type="submit" class="clr small waves-effect waves-light btn light-blue z-depth-0" id="btnSave" onclick="Save();">Save</button>
+                    <button type="submit" class="clr small waves-effect waves-light btn light-blue z-depth-0" id="btnSave" onclick="saveForm();">Save</button>
                 </div>
                 <div class="input-field col s6 m3 l3">
-                    <button type="reset" class="clr small waves-effect waves-light btn light-blue z-depth-0" onclick="fieldOff();clearButton();">Clear</button>
+                    <button type="reset" class="clr small waves-effect waves-light btn light-blue z-depth-0" onclick="clearForm();">Clear</button>
                 </div>
             </div>
         </form>
