--- a/index.html
+++ b/index.html
@@ -45,15 +45,14 @@
                     </a>
                 </div>
                 <div class="input-field masterPassword col s12 m12 l12 text-white inline">
-                    <input type="password" name="masterPass" value="" id="masterPass" class="validate fieldOn large" autocorrect="off" autocapitalize="off" tabindex="1" onfocus="$(this).select();" onclick="$(this).select();" onfocus="SelectAll('master');fieldOn('master');"
-                        onclick="SelectAll('master');fieldOn('master');" title="Choose a strong Master Password." style="" />
+                    <input type="password" name="masterPass" value="" id="masterPass" class="validate fieldOn large" autocorrect="off" autocapitalize="off" tabindex="1" onfocus="$(this).select();" onclick="$(this).select();" onfocus="SelectAll('master');fieldOn('master');" title="Choose a strong Master Password." style="" />
                     <label for="master">Master Password:</label>
                 </div>
             </header>
             <div class="row">
                 <div class="input-field col s12 m6 l6">
                     <input type="text" name="siteName" value="" id="siteName" class="fieldOn" autocorrect="off" autocapitalize="off" tabindex="2" onfocus="$(this).select();" onclick="$(this).select();" onfocus="SelectAll('master');fieldOn('master');" onclick="SelectAll('master');fieldOn('master');"
-                        title="Please enter a doman or sie name." style="" />
+                        title="Please enter a doman or site name." style="" />
                     <label for="site">Site Name:</label>
                 </div>
                 <div class="input-field col s12 m6 l6">
@@ -156,7 +155,7 @@
             </div>
             <div class="row">
                 <div class="input-field col s12 m12 l12">
-                    <input type="text" class="domainPassword" name="domainPassword" id="domainPassword" placeholder="Domain Password:" autocorrect="off" autocapitalize="off" onfocus="$(this).select();" onclick="$(this).select();" style="" />
+                    <input type="text" class="domainPassword" name="domainPassword" id="domainPassword" placeholder="Domain Password:" autocorrect="off" autocapitalize="off" onfocus="$(this).select();" style="" />
                     <label for="result"></label>
                 </div>
             </div>
@@ -254,6 +253,7 @@
 <script src="./js/chance.min.js" data-version="1.0.4" data-source="https://github.com/chancejs/chancejs"></script>
 <script src="./js/crypt.io.min.js" data-version="1.0.0" data-source="https://github.com/jas-/crypt.io"></script>
 <script src="./js/sjcl.js" data-version="1.0.4" data-source="https://github.com/bitwiseshiftleft/sjcl"></script>
+<script src="./js/clipboard.min.js" data-version="1.7.1" data-source="https://github.com/zenorocha/clipboard.js"></script>
 <!--<script src="./js/" data-version="" data-source=""></script>-->
 <script src="./js/app.js"></script>
 <script src="./js/xkcd.js"></script>
