--- a/index.html
+++ b/index.html
@@ -155,7 +155,17 @@
             </div>
             <div class="row">
                 <div class="input-field col s12 m12 l12">
-                    <input type="text" class="domainPassword" name="domainPassword" id="domainPassword" placeholder="Domain Password:" autocorrect="off" autocapitalize="off" onfocus="$(this).select();" style="" />
+                    <input
+                        type="text"
+                        class="domainPassword"
+                        name="domainPassword"
+                        id="domainPassword"
+                        placeholder="Domain Password:"
+                        autocorrect="off"
+                        autocapitalize="off"
+                        onfocus="$(this).select();"
+                        readonly="true"
+                        style="" />
                     <label for="result"></label>
                 </div>
             </div>
