--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
                     <label>Type:</label>
                 </div>
                 <div class="input-field col s6 m3 l3">
-                    <ul class="collapsible collapsible-accordion z-depth-0">
+                    <ul class="collapsible collapsible-accordion z-depth-0" id="optionsMenu" data-open="no">
                         <li>
-                            <a id="optionsMenu" class="collapsible-header">OPTIONS: <span class="right" id="optionsArrow">&#8675;</span></a>
+                            <a class="collapsible-header">OPTIONS: <span class="right" id="optionsArrow">&#8675;</span></a>
                             <div class="collapsible-body options">
                                 <ul>
                                     <li>
