--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </header>
             <div class="row">
                 <div class="input-field col s12 m6 l6">
-                    <input type="text" name="siteName" value="" id="siteName" class="fieldOn" onfocus="$(this).select();" onclick="$(this).select();" title="Please enter a doman or site name." autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" tabindex="2"
+                    <input type="url" name="siteName" value="" id="siteName" class="fieldOn" onfocus="$(this).select();" onclick="$(this).select();" title="Please enter a doman or site name." autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" tabindex="2"
                         style="" />
                     <label for="site">Site Name:</label>
                 </div>
