--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@
                     <label>Lenght:</label>
                 </div>
                 <div class="input-field col s4 m2 l2">
-                    <input type="number" id="year" value="document.write(currentYear);" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" tabindex="5" />
+                    <input type="tel" id="year" value="document.write(currentYear);" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" tabindex="5" />
                     <label for="yearNum" id="yearLabel" class="tooltipped" data-position="right" data-delay="100" data-tooltip="Yearly password change.">
                         Year:
                         </label>
                 </div>
                 <div class="input-field col s4 m2 l2">
-                    <input type="number" id="seedNum" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" tabindex="6" />
+                    <input type="tel" id="seedNum" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" tabindex="6" />
                     <label for="seedNum" id="seedNumLabel" class="tooltipped" data-position="right" data-delay="100" data-tooltip="Change the number to generate a new password.">
                         Seed:
                     </label>
